chore: [PAGOPA-3454] Improve openapi doc
